[package]
name = "zero-alloc-sudoku"
version = "1.0.0"
edition = "2021"
authors = ["nzengi"]
description = "Zero-allocation, sub-microsecond Sudoku solver with 9-bit bitboard constraint propagation and MRV backtracking."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nzengi/zero-alloc-sudoku"
homepage = "https://github.com/nzengi/zero-alloc-sudoku"
documentation = "https://docs.rs/zero-alloc-sudoku"
readme = "README.md"
keywords = ["sudoku", "solver", "bitboard", "puzzle", "zero-alloc"]
categories = ["algorithms", "game-engines", "no-std"]
exclude = ["target/"]

[dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Enable all CPU-specific optimizations
[profile.release.package."*"]
opt-level = 3

[[bin]]
name = "sudoku-solver"
path = "src/main.rs"

[lib]
name = "sudoku"
path = "src/lib.rs"
